force-app/main/default/objects/Valuation_Period__mdt/Valuation_Period__mdt.object-meta.xml
<CustomObject>
    <description>To hold configuration setting for Valuation Period</description>
    <label>Valuation Period</label>
    <pluralLabel>Valuation Periods</pluralLabel>
</CustomObject>