force-app/main/default/objects/Valuation_Period__mdt/fields/Create_Record_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Create_Record_Button_Name__c</fullName>
    <label>Create Record Button Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>