force-app/main/default/objects/Valuation_Period__mdt/fields/Default_Eng_CC_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Eng_CC_Page_Size__c</fullName>
    <label>Default Eng CC Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>