force-app/main/default/objects/Valuation_Period__mdt/fields/DefaultPageSizeForPositionList__c.field-meta.xml
<CustomField>
    <fullName>DefaultPageSizeForPositionList__c</fullName>
    <label>DefaultPageSizeForPositionList</label>
    <length>10</length>
    <type>Text</type>
</CustomField>