force-app/main/default/objects/Valuation_Period__mdt/fields/Eng_CC_Page_size_Option__c.field-meta.xml
<CustomField>
    <fullName>Eng_CC_Page_size_Option__c</fullName>
    <label>Eng CC Page size Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>