force-app/main/default/objects/Valuation_Period__mdt/fields/Import_Position_Default_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Import_Position_Default_Page_Size__c</fullName>
    <description>We would like to store default page size for import position screen functionality</description>
    <label>Import Position Default Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>