force-app/main/default/objects/Valuation_Period__mdt/fields/Import_Position_Default_VP_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Import_Position_Default_VP_Page_Size__c</fullName>
    <description>To store default page size for VPs in Import Position under portfolio Valuation functionality</description>
    <label>Import Position Default VP Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>