force-app/main/default/objects/Valuation_Period__mdt/fields/JobTypeFieldId__c.field-meta.xml
<CustomField>
    <fullName>JobTypeFieldId__c</fullName>
    <label>JobTypeFieldId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>