force-app/main/default/objects/Valuation_Period__mdt/fields/Main_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Object_API_Name__c</fullName>
    <label>Main Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>