force-app/main/default/objects/Valuation_Period__mdt/fields/Parent_Object_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Field_Id__c</fullName>
    <label>Parent Object Field Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>