force-app/main/default/objects/Valuation_Period__mdt/fields/Position_Page_Size_Options__c.field-meta.xml
<CustomField>
    <fullName>Position_Page_Size_Options__c</fullName>
    <label>Position Page Size Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>