force-app/main/default/objects/Valuation_Period__mdt/fields/VP_Page_Size_Options__c.field-meta.xml
<CustomField>
    <fullName>VP_Page_Size_Options__c</fullName>
    <label>VP Page Size Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>